// Copyright 2026 Yellowbrick Data, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package ai.floedb.floecat.common;

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "ai.floedb.floecat.common.rpc";
option java_outer_classname = "CommonProto";

// ----- Resource identity -----

enum ResourceKind {
  RK_UNSPECIFIED = 0;
  RK_ACCOUNT = 1;
  RK_CATALOG = 2;
  RK_NAMESPACE = 3;
  RK_TABLE = 4;
  RK_OVERLAY = 5;
  RK_STATS = 6;
  RK_CONNECTOR = 7;
  RK_VIEW = 8;
  RK_FUNCTION = 9;
  RK_OPERATOR = 10;
  RK_TYPE = 11;
  RK_CAST = 12;
  RK_COLLATION = 13;
  RK_AGGREGATE = 14;
}

message ResourceId {
  string account_id = 1;
  string id = 2;
  ResourceKind kind = 3;
}

message NameRef {
  string catalog = 1;
  repeated string path = 2;
  string name = 3;
  optional ResourceId resource_id = 4;
}

enum TemporalUnit {
  TU_UNSPECIFIED = 0;
  TU_SECONDS = 1;
  TU_MILLIS = 2;
  TU_MICROS = 3;
  TU_NANOS = 4;
}

message SourceType {
  // Source engine identifier (for example: "delta", "iceberg", "generic").
  string engine_kind = 1;
  // Raw declared type from the source system.
  string declared_type = 2;
  // Optional source-specific parameters.
  map<string, string> attrs = 3;
  // Source temporal unit for TIME/TIMESTAMP encodings when known.
  TemporalUnit temporal_unit = 4;
}

enum SpecialSnapshot {
  SS_UNSPECIFIED = 0;
  SS_CURRENT = 1;
}

message SnapshotRef {
  oneof which {
    int64 snapshot_id = 1;
    google.protobuf.Timestamp as_of = 2;
    SpecialSnapshot special = 3;
  }
}

/**
 * Intent to resolve a table or view.
 */
message QueryInput {
  oneof target {
    NameRef name = 1;
    ResourceId table_id = 2;
    ResourceId view_id = 3;
  }

  // Optional snapshot override (default: QueryContext.as_of_default).
  SnapshotRef snapshot = 10;
}

// ----- Pointers & Blobs -----

message Pointer {
  string key = 1;
  string blob_uri = 2;
  int64 version = 3;
  google.protobuf.Timestamp expires_at = 4;
}

message BlobHeader {
  ResourceId resource_id = 1;
  string schema_version = 2;
  string etag = 3;
  int64 content_length = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp last_modified_at = 6;
  repeated Tag tags = 7;
}

message Tag {
  string key = 1;
  string value = 2;
}

// ----- Auth: Principal context carried on internal gRPC -----

message PrincipalContext {
  string account_id = 1;
  string subject = 2;
  string client_id = 3;
  repeated string groups = 4;
  repeated string roles = 5;
  repeated string permissions = 6;
  repeated string scopes = 7;
  string query_id = 8;
  string correlation_id = 9;
  string locale = 10;
  google.protobuf.Timestamp issued_at = 11;
  google.protobuf.Timestamp expires_at = 12;
  bytes signature = 13;
}

// ----- Pagination & filtering -----

message PageRequest {
  int32 page_size = 1;
  string page_token = 2;
}

message PageResponse {
  string next_page_token = 1;
  int32 total_size = 2;
}

// ----- Common error -----

enum ErrorCode {
  MC_UNSPECIFIED = 0;
  MC_PERMISSION_DENIED = 1;
  MC_NOT_FOUND = 2;
  MC_PRECONDITION_FAILED = 3;
  MC_INVALID_ARGUMENT = 4;
  MC_CONFLICT = 5;
  MC_RATE_LIMITED = 6;
  MC_SNAPSHOT_EXPIRED = 7;
  MC_UNAUTHENTICATED = 8;
  MC_INTERNAL = 9;
  MC_UNAVAILABLE = 10;
  MC_TIMEOUT = 11;
  MC_CANCELLED = 12;
  MC_ABORT_RETRYABLE = 13;
}

message Error {
  ErrorCode code = 1;
  string message = 2;
  map<string, string> params = 3;
  map<string, string> context = 4;
  string message_key = 5;
  string correlation_id = 6;
}

message IdempotencyKey {
  string key = 1;
}

message Precondition {
  int64 expected_version = 1;
  string expected_etag = 2;
}

message MutationMeta {
  string pointer_key = 1;
  string blob_uri = 2;
  int64 pointer_version = 3;
  string etag = 4;
  google.protobuf.Timestamp updated_at = 5;
}
